# polysplit-rpc

./: .gitignore  .sqllsrc.json  Cargo.toml  Dockerfile  TODO.md  bun.lockb  docker-compose.yml  package.json  response.json
.sqlx/: query-011752aa4458563c269b9a0d32d7591d9694d8656c5424526d7fd6c7275b13ad.json  query-0982c1614c5c64adb89682f365f33ec14c843bfbac14135c75e3103da8eb0eaf.json  query-0a96b3338b68116f6747eaff5ee6715145535f39163716bc22ca2a148f9f1e50.json  query-1c28bcb2d45ec83c2a7fda330c8d6218c5a1d7ebb4cae91b351770e4b2119522.json  query-34105936f5ab1dcd996da17a509553a7f1b788c1124052a3c347a3e5774096a5.json  query-3bcc70386b07375c3fa8897810ba0bb5cb5e71a56817a20bfa5cd2ad2180e479.json  query-64a15b0751e72d1772d68b5061720c994f1fe022d81dc610e52345226edbd5f1.json  query-6b5ba67e2be29ab1a7cd3631aad2f70ee2bcdb44d0f132447180b759321e233a.json  query-74ebd75844651ef1e75252bf3628e6dd33a7291a08a55756d877c4aa6b3054fe.json  query-776c9483dce749c90b3b1e4c452025370c7f600d2d6145a9ec1ed0243e529024.json  query-791aa3050a47882584d17dc8a89fb805326e66aea109a82f30043ddfa2094adb.json  query-7e7a165cc2ff50fe7ba722e058a1adcb78a2402fd1b19c650d89c6d9ff37e105.json  query-89bb37cd043c8cf764f5c8ad36312cdb6bc203d172a3996108436d9207cdbba8.json  query-a295413eaed27aa3b9b06317cbc8693ecee30004aa717fdcc592d3f0bd1bf377.json  query-bb1d273c718e24d75ef83db9fbb8a9079372a79717ab16dd2a57566419a3211e.json  query-e3dd6313ec221509f13e3d385f156f46f5fff65b0bfbe3256d5d5ee64607ac6b.json  query-e863d58b5d789e19ddc6d1a16de896b9ffdd9bce1bee46ee0ae5dcd4a288c4c4.json  (+4 more)
migrations/: 20240205220441_users.up.sql  (+2 more)
(+47 files in other folders)
