[package]
name = "polysplit-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
env_logger = "0.10.1"
log = "0.4.20"
cron-job = "0.1.4"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
regex = "1.10.3"

moka = { version = "0.12.4", features = ["sync"] } 

schemars = { version = "0.8", features = ["uuid1"] }
rocket = { version = "0.5.0", default-features = false, features = ["json", "uuid"] }
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc", "uuid"] }

pwhash = "1"
jsonwebtoken = "9.2.0"

async-trait = "0.1.74"
async-recursion = "1.0.5"
mockall = "0.12.0"
regex-macro = "0.2.0"
tokio-cron-scheduler = "0.10.0"
futures = "0.3.30"
rocket_cors = "0.6.0"
